--- a/craigExam/index.html
+++ b/craigExam/index.html
@@ -25,46 +25,10 @@
    <style shim-shadowdom>
   
    
-   html,body {
+   body {
    
-        height: 100%
-   	font-family: 'RobotoDraft', 'Helvetica Neue', 'Helvetica', Arial;
-	margin: 0;
-	padding: 24px;
-	-webkit-tap-highlight-color: rgba(0,0,0,0);
-	-webkit-touch-callout: none;
-	}
-	core-header-panel {
-	  height: 100%;
-	  overflow: auto;
-	  -webkit-overflow-scrolling: touch;
-	}
-	core-toolbar {
-		background: #03a9f4;
-		color: white;
-	}
-	#tabs {
-	  width: 100%;
-	  margin: 0;
-	  -webkit-user-select: none;
-	  -moz-user-select: none;
-	  -ms-user-select: none;
-	  user-select: none;
-	  text-transform: uppercase;
-	}
-	.container {
-	  width: 80%;
-	  margin: 50px auto;
-	}
+        
 
-	@media (min-width: 481px) {
-		#tabs {
-		  width: 200px;
-		}
-		.container {
-		  width: 400px;
-		}
-	}
 
 	paper-radio-group.blue paper-radio-button::shadow #ink[checked] {
 	  color: #4285f4;
@@ -98,32 +62,6 @@
 	<label id="rad4" for="radio4"></label>
    </fieldset>
        -->
-    <core-header-panel>
-
-    <core-toolbar>
-
-      <paper-tabs id="tabs" selected="Home" self-end>
-        <paper-tab name ="home">Home</paper-tab>
-        <paper-tab name="test">Test</paper-tab>
-      </paper-tabs>
-
-    </core-toolbar>
-
-    <div class="container" layout vertical center>
-      <post-list show="home"></post-list>
-    </div>
-
-    </core-header-panel>
-
-    <script>
-    var tabs = document.querySelector('paper-tabs');
-    var list = document.querySelector('post-list');
-
-    tabs.addEventListener('core-select', function() {
-      list.show = tabs.selected;
-    });
-    </script>
-
 
    <section>
    
